# teeny-tiny-interpreter

./: Cargo.toml  README.md  hello_world.tt  out.c
cemitter/: Cargo.toml
cemitter/src/: lib.rs
lexer/src/: lib.rs  tokens.rs
parser/src/: lib.rs
src/: main.rs
tt_snippets/: expressions_comparison.tt  label_loop.tt  num_printing
