[package]
name = "teeny_tiny_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cemitter = { version = "0.1.0", path = "cemitter" }
lexer = { version = "0.1.0", path = "lexer" }
parser = { version = "0.1.0", path = "parser" }


[workspace]
members = ["lexer", "parser"]

[profile.release]
strip = true
lto = true
# I don't want to change optimization level
codegen-units = 1
panic = "abort"
